{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 55,
  "lineage": "23894a79-2174-0df9-ab89-cf82651597e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694448848887:internet-gateway/igw-0e7a7d9e584b630d4",
            "id": "igw-0e7a7d9e584b630d4",
            "owner_id": "694448848887",
            "tags": {
              "Name": "sri-igw"
            },
            "tags_all": {
              "Name": "sri-igw"
            },
            "vpc_id": "vpc-0d4ff6abb85131942"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694448848887:route-table/rtb-0877a0a704a3ed5f6",
            "id": "rtb-0877a0a704a3ed5f6",
            "owner_id": "694448848887",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4ff6abb85131942"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.sss",
            "aws_vpc.sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694448848887:route-table/rtb-0c1de61180c6fef6c",
            "id": "rtb-0c1de61180c6fef6c",
            "owner_id": "694448848887",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7a7d9e584b630d4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4ff6abb85131942"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.sss",
            "aws_vpc.sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sss",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694448848887:subnet/subnet-0174e1bb8362cd47f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0174e1bb8362cd47f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694448848887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web1"
            },
            "tags_all": {
              "Name": "web1"
            },
            "vpc_id": "vpc-0d4ff6abb85131942"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694448848887:subnet/subnet-05aab28860c26232e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05aab28860c26232e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694448848887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web2"
            },
            "tags_all": {
              "Name": "web2"
            },
            "vpc_id": "vpc-0d4ff6abb85131942"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694448848887:subnet/subnet-0e9b8da266e84d842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9b8da266e84d842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694448848887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1"
            },
            "tags_all": {
              "Name": "app1"
            },
            "vpc_id": "vpc-0d4ff6abb85131942"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694448848887:subnet/subnet-041525ae0e8c1f353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041525ae0e8c1f353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694448848887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app2"
            },
            "tags_all": {
              "Name": "app2"
            },
            "vpc_id": "vpc-0d4ff6abb85131942"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694448848887:subnet/subnet-0568178f3253194a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0568178f3253194a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694448848887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db1"
            },
            "tags_all": {
              "Name": "db1"
            },
            "vpc_id": "vpc-0d4ff6abb85131942"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694448848887:subnet/subnet-0e6016e2107213e45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6016e2107213e45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694448848887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db2"
            },
            "tags_all": {
              "Name": "db2"
            },
            "vpc_id": "vpc-0d4ff6abb85131942"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694448848887:vpc/vpc-0d4ff6abb85131942",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08dd95a1a4497f773",
            "default_route_table_id": "rtb-07eba3ea31a85eb41",
            "default_security_group_id": "sg-00984ee02db11f9ce",
            "dhcp_options_id": "dopt-0cac2d050a8729f53",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d4ff6abb85131942",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07eba3ea31a85eb41",
            "owner_id": "694448848887",
            "tags": {
              "Name": "sri"
            },
            "tags_all": {
              "Name": "sri"
            }
          }
        }
      ]
    }
  ]
}